--- a/Sources/FlaUITest/FlaUITest.csproj
+++ b/Sources/FlaUITest/FlaUITest.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AutomationElementIdentifiers.cs" />
     <Compile Include="AutomationObjectIds.cs" />
     <Compile Include="Elements\BaseElement.cs" />
+    <Compile Include="Elements\ControlElement.cs" />
     <Compile Include="ElemProperties\AutomationElementPropertiesImpl.cs" />
     <Compile Include="FlaUIExt\OurAutomation.cs" />
     <Compile Include="FlaUIExt\OurEventLibrary.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Elements\WindowElement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
