--- a/Sources/FlaUITest/FlaUITest.csproj
+++ b/Sources/FlaUITest/FlaUITest.csproj
@@ -60,6 +60,7 @@
     <Compile Include="AutomationObjectIds.cs" />
     <Compile Include="Elements\BaseElement.cs" />
     <Compile Include="Elements\ControlElement.cs" />
+    <Compile Include="Elements\ControlElementPatterns.cs" />
     <Compile Include="ElemProperties\AutomationElementPropertiesImpl.cs" />
     <Compile Include="FlaUIExt\OurAutomation.cs" />
     <Compile Include="FlaUIExt\OurEventLibrary.cs" />
@@ -67,6 +68,9 @@
     <Compile Include="FlaUIExt\OurPropertyLibrary.cs" />
     <Compile Include="FlaUIExt\ProtocolHandler.cs" />
     <Compile Include="Elements\WindowElement.cs" />
+    <Compile Include="Patterns\OurInvokePattern.cs" />
+    <Compile Include="Patterns\OurInvokePatternImpl.cs" />
+    <Compile Include="Patterns\PatternIds.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchHelpers.cs" />
